css/main.css
/**************************************************
GENERAL
**************************************************/

body{
  font-family: 'Open Sans' , sans-serif;
  background-color: #fff;
}
  
.inner {
  max-width: 940px;
  margin: 0 auto;
  padding: 0 5%;
}

a {
  text-decoration: none;
  color: #000;
}


/**************************************************
HEADING
**************************************************/

#logo {
  text-align: center;
}

h1 {
  font-family: 'Open sans' , sans-serif;
  font-weight: 800;
  color: #01A2A6;
}

header a p {
  font-family: 'Open sans' , sans-serif;
  font-weight: 500;
  font-size: 0.9em;
  margin-top: -3px;
  color:#2f2933;
}
  
/**************************************************
NAVIGATION
**************************************************/

nav {
  text-align: center;
  padding: 15px 0;
  margin: 20px 0 0;
  background-color: #2f2933;
}

nav ul {
  list-style: none;
  margin: 0 10px;
  padding: 0;
}

nav li {
  display: inline-block; 
}

nav a {
  font-weight: 300;
  font-size: 1em;
  padding: 15px 10px;
}

nav a, nav a:visited {
  color: #fff;
}

nav a.selected, nav a:hover {
 color: #01A2A6; 
}

/**************************************************
FOOTER
**************************************************/

.footerstripe {
  text-align:center;
  display:block;
  width: 100%;
  background-color:#2f2933;
  overflow:auto;
}

.footerstripe p {
    color: #fff;
    font-family: 'Raleway', sans-serif; 
}

/**************************************************
PAGE: HOME
**************************************************/

.aboutstripe {
  display:block;
  width: 100%;
  background-color:#01A2A6;
  overflow:auto;
  padding-bottom: 50px;
}
 
.indexpic {
  float: left;
  padding:10px;
  background-color:#fff;
  transform: rotate(-8deg);
  height: 260px;
  margin-top: 6%;
  margin-right:6%;
  margin-bottom: 2%;
}

.introtext {
  font-family: 'Raleway', sans-serif;  
  color: #FFF;
  margin: 3% 0;
  padding-top:3%;
  font-size: 2em;
  font-weight: 500;
}
  
.introtext2 {
  font-family: 'Raleway', sans-serif;  
  color: #FFF;
  margin: 3% 0;
  font-size: 1.1em;
  font-weight:100;
  line-height:140%;
}
  
h2, h3 {
  display: block;
  font-size: 3em;
  color: #2f2933;
  margin: 15px auto;
  text-align: center;
  padding-top:10%;
}

.funpackage {
  padding-bottom: 100px;
  padding-top: 5px;
  background-color: #FFFFCB;
}

.funpackage p {
  text-align:center;
  font:'Raleway', sans-serif;
  color:#000;
}

.funpackage li {
  list-style: none;
  display: inline-block;
  width:33%;
  vertical-align: top;
}

.funpackage li a p {
  text-align: center;
  font:'Raleway', sans-serif;
  font-weight: 800;
  color:#01A2A6;
  padding-bottom:30px;
}

.funpackage p a {
  color:white;
}

.packagepic {
  max-height:250px;
  border: 4px solid #01A2A6;
}


.feedback {
  padding-bottom:10%;
}

.feedback p {
  text-align:center;
  font:'Raleway', sans-serif;
  color:#2f2933;
}

.feedback ul {
  margin: 0;
  display: block;
  padding: 0;
}

.feedback li {
  list-style: none;
  display: inline-block;
  width: 33%;
  padding: 2.5%;
  box-sizing: border-box;
  vertical-align: top;
}

.feedback li a p {
  color: #2f2933;
  font-family: 'Raleway', sans-serif;
  line-height: 1.5;
  font-size:0.9em;
}  

.feedbackpic {
  display: block;
  width: 200px;
  height: 200px;
  margin: 0 auto 30px;
  border-radius: 100%;
}

.feedback p a {
  color:white;
}

.button {
  padding:15px;
  background-color:#01A2A6;
  border-radius: 15px;
}

/**************************************************
PAGE: PACKAGES
**************************************************/




/**************************************************
PAGE: REVIEWS
**************************************************/




/**************************************************
PAGE: CONTACT
**************************************************/


  

